# udev-discovery-handler

./: Cargo.toml  Makefile  README.md
.github/: pull_request_template.md
.github/workflows/: build-container.yml  check-rust.yml  run-tarpaulin.yml  run-test-cases.yml
_scratch/: rune2e.md
crates/udev/: Cargo.toml
crates/udev/src/: discovery_impl.rs
e2e/: conftest.py
