[package]
name = "udev-discovery-handler"
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[workspace.package]
version = "0.12.16"
license = "Apache-2.0"
authors = ["Akri Maintainers <cncf-akri-maintainers@lists.cncf.io>"]
edition = "2018"
rust-version = "1.68.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
akri-discovery-utils = { git = "https://github.com/project-akri/akri/", tag = "v0.12.9" }
akri-udev = { path = "crates/udev" }
env_logger = "0.10.0"
log = "0.4"
tokio = { version = "1.0.1" }
